tests/ui/wf/wf-impl-associated-type-region.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/wf-impl-associated-type-region.rs:10:16
   |
LL |     type Bar = &'a T;
   |                ^^^^^ ...so that the reference type `&'a T` does not outlive the data it points at
   |
help: consider adding an explicit lifetime bound...
   |
LL | impl<'a, T: 'a> Foo<'a> for T {
   |           ++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0309`.
